# summit-data-science

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  PLAN.md  README.md  analysis.py  dash_dashboard.py  dashboard.py  data_processing.py  debug_correlation.py  debug_correlation_v2.py  debug_instate_rate.py  docker-compose.yml  example.html  fix_app.py  main.py  owner_analysis.py  property_analysis.py  property_examples.py  pyproject.toml  quickstart.sh  requirements.txt  run_dashboard.sh  scraper_old.py  simplified_analysis.py  test_geo_debug.py  test_sensitivity.py  test_sensitivity_gbm.py  us_pop.csv  utils.py  verify_buyer_hypotheses.py
.streamlit/: config.toml
analysis/: check_owner_occupied.py  verify_data_integrity.py
config/: ml_config.yaml
data/: AbstractCodes.csv  building_type_sqft_summary.csv  building_type_summary.csv  buyer_characteristics_by_location.csv  contextual_growth_metrics.csv  cpi.csv  fed_rate.csv  hotel_growth_timeline.csv  local_housing_supply_timeline.csv  metadata.json  mortgage_rate.csv  multi_property_owner_breakdown.csv  owner_data.csv  owner_location_summary.csv  owner_property_portfolio.csv  owner_type_summary.csv  property_ownership_by_location.csv  property_ownership_distribution.csv  rejected_records.csv  sp500.csv  sp500_annual.csv  sqft_by_location_and_type.csv  summit_pop.csv  top_out_of_state_locations.csv  total_residential_sqft_timeline.csv  us_housing.csv  us_pop.csv
docs/: 2023 Commercial Improved Codes V2.xlsx  2023 Land Codes.xlsx  2023 Other Improvement Codes.xlsx  Abstract Codes_202205191431041019.xlsx  (+2 more)
(+136 files in other folders)
